--- a/src/App.scss
+++ b/src/App.scss
@@ -13,5 +13,9 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
+
+    height: 1200px;
+    max-width: 100vw;
+    overflow: hidden;
   }
 }
