--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,74 +1,39 @@
 @import "../../utils/mixins.scss";
-@import "../../utils/vars.scss";
+@import "../../utils/consts.scss";
 @import "../../utils/fonts.scss";
 
-.header {
-  position: relative;
+.Header {
+	position: fixed;
+	right: 0;
+	left: 0;
+	top:0;
+	display: flex;
+	justify-content: center;
 	background: white;
 	box-shadow: 0 0.2rem 0.4rem 0.2rem rgba(0, 0, 0, 0.06),
 		0 0.6rem 0.9rem 0.2rem rgba(0, 0, 0, 0.04);
-  
-  &__wrapper {
-    max-width: $max-width-desc;
-    margin: 0 auto; 
-  }
 
-	&__nav {
-		display: flex;
-   
-    margin: 0;
-    padding: 0;
+		overflow: hidden;
 
-  
-	}
-}
 
-.toggle {
-	&__btn {
-		display: none;
+	&__wrapper {
 		position: relative;
-		padding: 8px 0;
-		width: 28px;
-		height: 4px;
-		outline: none;
-		cursor: pointer;
-		z-index: 2;
-		@media screen and (max-width: 1024px) {
-			display: block;
-		}
-
-		&--close ~ .toggle__btn > .toggle__spanr {
-			transform: rotate(45deg);
-		}
-		&--close ~ .toggle__btn > .toggle__spanr::before {
-			top: 0;
-			transform: rotate(0);
-		}
-		&--close ~ .toggle__btn > .toggle__spanr::after {
-			top: 0;
-			transform: rotate(90deg);
-		}
-	}
-
-	&__span::before {
-		content: "";
-		top: -8px;
-	}
-
-	&__span::after {
-		content: "";
-		bottom: -8px;
-	}
-
-	&__span,
-	&__span::before,
-	&__span::after {
-		display: block;
-		position: absolute;
+		max-width: $max-width-desc;
 		width: 100%;
-		height: 3px;
-		background-color: #fff;
-		border-radius: 4px;
-		transition: 0.35s;
+		max-height: $header-height;
+		
+
+		display: flex;
+		justify-content: space-around;
+		align-items: stretch;
+
+		margin: 0 auto;
+		padding: 0;
+
+		@media screen and (max-width: 970px) {
+			margin: 0 20px;
+			height: $header-height-xs;
+			justify-content: space-between;
+		}
 	}
 }
