--- a/src/utils/consts.scss
+++ b/src/utils/consts.scss
@@ -1,8 +1,16 @@
-$body-color: #f2f9ff;
-$main-color: #008aff;
-$prime-color: #eb9b08;
+$body-color: #ffffff;
+
+$prime-text: #34495E;
+$minor-text: #89939a;
+
+$prime-color: #34495E;
+$minor-color: #F6D100;
+$shadow-color: #ebebeb;
+
+
+
 $prime-color-active: #ff7e6c;
-$title-color: #253757;
+
 $card-button-color: #334563;
 $title-xs-color: #c0cdd7;
 $paragraph-color: #6c788b;
@@ -13,7 +21,7 @@ $card-color-3: #f25656;
 $card-color-4: #15d850;
 
 $max-width-container: 1600px;
-$max-width-desc: 1170px;
+$max-width-desktop: 1170px;
 
 $logo-height: 114px;
 $logo-height-xs: 68px;
