--- a/src/App.scss
+++ b/src/App.scss
@@ -1,21 +1,12 @@
+@import "./utils/fonts.scss";
+
 html {
   width: 100%;
+
+  font-family: Poppins, sans-serif;
 }
 
 body {
   margin: 0;
   padding: 0;
-}
-
-.App {
-  &__main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-
-    height: 1200px;
-    max-width: 100vw;
-    overflow: hidden;
-  }
 }
