--- a/src/components/MobileNav/MobileNav.scss
+++ b/src/components/MobileNav/MobileNav.scss
@@ -56,7 +56,7 @@
 		&__link {
 			text-decoration: none;
 			line-height: 6rem;
-			@include upper-case;
+			@include uppercase;
 			color: #cdd8e0;
 			&:hover {
 				color: #cdd8e0;
