--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -12,13 +12,14 @@
 		max-width: 320px;
 		height: 0;
 		width: 0;
-		background-color: white;
+		background-color: $body-color;
 	}
 
 	&__list {
 		display: flex;
-		justify-content: space-between;
+		justify-content: flex-start;
 		align-items: stretch;
+		height: 100%;
 		
 		margin: 0;
 		padding: 0;
@@ -27,8 +28,9 @@
 
 	&__item {
 		display: flex;
-		align-items: center;
-		margin: 0 auto;
+		align-items: flex-end;
+		margin: 0;
+		padding: 0;
 	}
 
 	&__logo {
@@ -37,25 +39,19 @@
 	}
 
 	&__link {
+		padding: 0 16px;
 		text-decoration: none;
-		line-height: 6rem;
-		@include upper-case;
-		color: #89939a;
+		line-height: 48px;
+		border-bottom: $line-size solid transparent;
+		@include uppercase;
+		color: $minor-text;
 		&:hover {
-			color: #89939a;
+			color: $minor-text;
+			border-bottom: $line-size solid $minor-color;
 		}
 		&.active {
-			color: #313237;
-			position: relative;
-
-			&::before {
-				content: "";
-				border-bottom: $line-size  solid orange;
-				display: block;
-				width: 100%;
-				position: absolute;
-				bottom: 0;
-			}
+			color: $prime-text;
+			border-bottom: $line-size solid $prime-color;
 		}
 	}
 }
