--- a/src/utils/mixins.scss
+++ b/src/utils/mixins.scss
@@ -1,8 +1,48 @@
 @import "./fonts.scss";
 
+@mixin uppercase {
+	font-size: 14px;
+  font-weight: 500;
+	letter-spacing: 0.125rem;
+	text-transform: uppercase;
+}
+
+@mixin h2 {
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 28px;
+	letter-spacing: -0.4px;
+	margin: 0 0 8px 0;
+}
+
+@mixin md-text {
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 22px;
+}
+
+@mixin sm-text {
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 18px;
+}
+
+@mixin italic {
+	font-style: italic;
+}
+
+@mixin link {
+	text-decoration: none;
+	color: inherit;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 18px;
+}
+
+
+
 
 @mixin body-text {
-	font-family: Poppins, sans-serif;
 	font-style: normal;
 	font-weight: 500;
 	font-size: 14px;
@@ -12,29 +52,15 @@
 
 }
 @mixin buttons {
-	font-family: Poppins, sans-serif;
 	font-style: normal;
 	font-weight: 600;
 	font-size: 14px;
 	line-height: 21px;
 	color: white;
 }
-@mixin small-text {
-	font-family: Poppins, sans-serif;
-	font-style: normal;
-	font-weight: 600;
-	font-size: 12px;
-	line-height: 15px;
-	color: #313237;
-}
-@mixin h2 {
-	font-family: Poppins, sans-serif;
-	font-weight: bold;
-	font-size: 22px;
-	line-height: 140%;
-}
+
+
 @mixin h1 {
-	font-family: Poppins, sans-serif;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 32px;
@@ -42,16 +68,8 @@
 	letter-spacing: -0.01em;
 	color: #313237;
 }
-@mixin upper-case {
-	font-family: Poppins, sans-serif;
-	font-size: 1.025rem;
-  font-weight: 500;
-	letter-spacing: 0.125rem;
-	text-transform: uppercase;
-	color: #313237;
-}
+
 @mixin h3 {
-	font-family: Poppins, sans-serif;
 	font-style: normal;
 	font-weight: 600;
 	font-size: 20px;
@@ -59,7 +77,6 @@
 	color: #313237;
 }
 @mixin icons-font {
-	font-family: Poppins, sans-serif;
 	font-style: normal;
 	font-weight: 600;
 	font-size: 9px;
@@ -68,7 +85,6 @@
 	color: white;
 }
 @mixin placeholder {
-	font-family: Poppins, sans-serif;
 	font-style: normal;
 	font-weight: 600;
 	font-size: 14px;
