--- a/src/utils/consts.scss
+++ b/src/utils/consts.scss
@@ -1,35 +1,18 @@
-$body-color: #ffffff;
+$bg-color: #ffffff;
 
-$prime-text: #34495E;
+$prime-text: #34495e;
 $minor-text: #89939a;
 
-$prime-color: #34495E;
-$minor-color: #F6D100;
+$prime-color: #34495e;
+$minor-color: #f6d100;
 $shadow-color: #ebebeb;
 
-
-
-$prime-color-active: #ff7e6c;
-
-$card-button-color: #334563;
-$title-xs-color: #c0cdd7;
-$paragraph-color: #6c788b;
-
-$card-color-1: #56ccf2;
-$card-color-2: #fcc304;
-$card-color-3: #f25656;
-$card-color-4: #15d850;
-
-$max-width-container: 1600px;
 $max-width-desktop: 1170px;
-
-$logo-height: 114px;
-$logo-height-xs: 68px;
 
 $header-height: 120px;
 $header-height-xs: 80px;
+$logo-height: 114px;
+$logo-height-xs: 68px;
 
 $m-nav-radius: 200px;
 $line-size: 0.265rem;
-
-
