--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -9,6 +9,10 @@
 	padding: 0 40px;
 	overflow: hidden;
 
+	@media screen and (max-width: 970px) {
+		margin: $header-height-xs+42px auto;
+	}
+
 	&__wrapper {
 		width: 100%;;
 	}
