--- a/src/components/PostCard/PostCard.scss
+++ b/src/components/PostCard/PostCard.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
 
-  background-color: $body-color;
+  background-color: $bg-color;
   border-radius: 3px;
   border: 1px solid $prime-color;
   box-shadow: 0 0.1rem 0.4rem 0.1rem rgba(0, 0, 0, 0.06),
