--- a/src/utils/consts.scss
+++ b/src/utils/consts.scss
@@ -4,15 +4,18 @@ $prime-text: #34495e;
 $minor-text: #89939a;
 
 $prime-color: #34495e;
+$side-color: #D4EBFB;
 $minor-color: #f6d100;
 $shadow-color: #ebebeb;
 
 $max-width-desktop: 1170px;
 
 $header-height: 120px;
-$header-height-xs: 80px;
-$logo-height: 114px;
-$logo-height-xs: 68px;
+$header-height-xs: 60px;
+$logo-height: 120px;
+$logo-height-xs: 60px;
+$content-margin: 42px;
+$content-margin-xs: 24px;
 
 $m-nav-radius: 200px;
-$line-size: 0.265rem;
+$line-size: 0.25rem;
