--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,9 @@
 html {
   width: 100%;
   font-family: Poppins, sans-serif;
+  overflow: auto;
+  scrollbar-width: none;
+  scrollbar-gutter: stable both-edges;
 }
 
 body {
