--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,28 +1,17 @@
 @import "../../utils/mixins.scss";
 @import "../../utils/consts.scss";
 
-.Main {
+.article-wrapper {
 	position: relative;
 	max-width: $max-width-desktop;
+	margin: $content-margin auto 20px;
 
-	margin: $header-height+48px auto;
-	padding: 0 40px;
-	overflow: hidden;
+	display: grid;
+    grid-template-columns:  minmax(0,1fr)  minmax(0,5fr);
+    grid-gap: 3rem;
+
 
 	@media screen and (max-width: 970px) {
-		margin: $header-height-xs+42px auto;
-	}
-
-	&__wrapper {
-		width: 100%;;
-	}
-
-	&__list {
-		display: grid;
-		gap: 1rem;
-		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-		margin: 0;
-		padding: 0;
-		list-style: none;
+		margin: $content-margin-xs auto;
 	}
 }
