--- a/src/components/PostCard/PostCard.scss
+++ b/src/components/PostCard/PostCard.scss
@@ -2,7 +2,7 @@
 @import "../../utils/consts.scss";
 
 .PostCard {
-  padding: 24px;
+  padding:18px 24px 24px;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -22,7 +22,6 @@
     @include link;
     color: $minor-text;
   }
-
 
   &__sm-text {
     @include sm-text;
