--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -5,6 +5,7 @@
 	position: relative;
 	max-width: $max-width-desktop;
 	margin: $content-margin auto 20px;
+	padding: 0 16px;
 
 	display: grid;
     grid-template-columns:  minmax(0,1fr)  minmax(0,5fr);
@@ -13,5 +14,7 @@
 
 	@media screen and (max-width: 970px) {
 		margin: $content-margin-xs auto;
+		grid-template-columns:  1fr;
+    grid-gap: 2rem;
 	}
 }
