--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -2,31 +2,31 @@
 @import "../../utils/consts.scss";
 
 .home {
-  &-heading {
-    @include uppercase;
-    display: block;
-    align-self: start;
-    max-height: 32px;
-    padding: 0.5rem 1rem;
-    margin: 0;
-    text-align: left;
-    border: none;
-    border-radius: 0;
-    border-right: $line-size solid $minor-color;
-    background-color: rgba($minor-color, 0.3);
-  }
+	&-heading {
+		border-right: $line-size solid $minor-color;
+		background-color: rgba($minor-color, 0.3);
+	}
 
-  &-description {
-    font-style: italic;
-    color: $prime-text;
-    max-width: 700px;
-  }
+	&-description {
+		font-style: italic;
+		color: $prime-text;
+		max-width: 700px;
+	}
 
-  &-h3 {
-    margin: 0;
-  }
+	&-h3 {
+		margin: 0;
+	}
 
-  &-note {
-    @include md-text;
-  }
+	&-note {
+		@include md-text;
+	}
+
+	&-phone {
+		color: inherit;
+		text-decoration: none;
+
+    &::visited {
+      color: inherit;
+    }
+	}
 }
