--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -8,7 +8,7 @@
 	padding: 0 16px;
 
 	display: grid;
-    grid-template-columns:  minmax(0,1fr)  minmax(0,5fr);
+    grid-template-columns:  minmax(200px,1fr)  minmax(0,5fr);
     grid-gap: 3rem;
 
 
