--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,7 @@ html {
   font-family: Poppins, sans-serif;
   overflow: auto;
   scrollbar-width: none;
-  scrollbar-gutter: stable both-edges;
+  scrollbar-gutter: stable;
 }
 
 body {
